fix mobile scrollbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,10 @@
 .vertical-center {
     min-height: 100%;
     min-height: 100vh;
+    overflow-y: hidden;
     display: flex;
     align-items: center;
-  }
+}
 
 .navlink {
     width: fit-content;
